--- a/config/INSTALL
+++ b/config/INSTALL
@@ -1,16 +1,9 @@
 AMI: ami-3fe42456
 
-yum -y install readline-devel openssl-devel curl-devel mysql50-devel httpd-devel mod_ssl mysql50 mysql50-server httpd s3cmd
-cd /tmp
-wget http://pyyaml.org/download/libyaml/yaml-0.1.4.tar.gz
-tar xzvf yaml-0.1.4.tar.gz
-cd yaml-0.1.4
-./configure --prefix=
-make
-make install
+yum -y install zlib-devel libffi-devel libyaml-devel readline-devel openssl-devel curl-devel mysql50-devel httpd-devel mod_ssl mysql50 mysql50-server httpd s3cmd
 cd /tmp
 wget http://ftp.ruby-lang.org/pub/ruby/1.9/ruby-1.9.3-p194.tar.gz
-tar xzvf ruby-1.9.3-p194.tar.gz
+tar -xzf ruby-1.9.3-p194.tar.gz
 cd ruby-1.9.3-p194
 ./configure --prefix=
 make
